...

  Box(
      modifier =
          Modifier.fillMaxWidth()
              .aspectRatio(PROFILE_IMAGE_ASPECT_RATIO)
              .background(Color.LightGray)
              .testTag("profileHeader")) {

        // Profile image
        AsyncImage(
            model = profile.profilePictureUrl,
            contentDescription = "Profile Image",
            contentScale = ContentScale.Crop,
            modifier =
                Modifier.fillMaxSize()
                    .background(MaterialTheme.colorScheme.surfaceVariant, CircleShape)
                    .testTag("profilePicture"),
            placeholder = painterResource(id = R.drawable.nopp),
            error = painterResource(id = R.drawable.nopp))

        // Back button
        IconButton(
            onClick = { navigationActions.goBack() },
            modifier =
                Modifier.align(Alignment.TopStart)
                    .padding(PROFILE_IMAGE_PADDING)
                    .background(BUTTON_BG_GRADIENT, shape = CircleShape)
                    .testTag("goBackButton")) {
              Icon(
                  imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                  contentDescription = "Go Back",
                  tint = Color.White)
            }

...
        }

        // Edit Button or message button
        if (!profileInNotification) {
          val buttonIcon = if (myProfile) Icons.Filled.Create else Icons.AutoMirrored.Filled.Send
          val buttonDescription = if (myProfile) "Edit Profile" else "Send Request"
          val buttonTag = if (myProfile) "editButton" else "requestButton"
          Box(
              modifier =
                  Modifier.align(Alignment.BottomEnd)
                      .padding(PADDING_STANDARD)
                      .size(REQUEST_BUTTON_SIZE)
                      .shadow(REQUEST_BUTTON_ELEVATION, shape = CircleShape)
...
              Text(
                  text = profile.name,
                  style = USERNAME_TEXT_STYLE,
                  modifier =
                      Modifier.align(Alignment.CenterStart)
                          .padding(horizontal = PADDING_STANDARD)
                          .testTag("username"))
            }
      }

  if (blockReportModal) {
    val configuration = LocalConfiguration.current
    val screenWidth = configuration.screenWidthDp.dp
...
